# blog-examples

./: .gitattributes  .gitignore  .gitmodules  README.md
.github/workflows/: claude-auto-review.yml  claude.yml
aidemo/: build.gradle  compose.yaml
aidemo/src/main/java/com/kidoni/aidemo/: SpringBootAiDemoApplication.java
aidemo/src/test/java/com/kidoni/aidemo/: SpringBootAiDemoApplicationTests.java  TestSpringBootAiDemoApplication.java
buildSrc/: README.md
fortune-java/: .gitignore  build.gradle  settings.gradle
fortune-java/src/main/java/org/kidoni/: Fortune.java
fortune-java/src/test/java/org/kidoni/: KidoniTest.java
fortune-rust/: Cargo.toml
fortune-rust/src/: main.rs
java-gatherers/: gradle.properties  settings.gradle
java-gatherers/lib/: build.gradle
java-gatherers/lib/src/main/java/org/kidoni/: Gatherers.java
java-gatherers/lib/src/test/java/org/kidoni/: GatherersTest.java
nextjs-example/: .gitignore  package-lock.json  package.json
nextjs-example/src/app/: page.tsx
observability-demo/: .gitignore  .sdkmanrc  build.gradle  settings.gradle
observability-demo/src/main/java/com/ksw/observability/demo/: ObservabilityDemoApplication.java
observability-demo/src/main/resources/: application.yml
rmail/: Cargo.toml
rmail/src/: .app.rs.swp  app.rs  main.rs
rust-examples/: Cargo.toml
rust-examples/src/: main.rs
rust-git/: Cargo.toml  README.md  git-config.txt
rust-git/src/: commands.rs  commit.rs  main.rs  object.rs  tag.rs  util.rs
rust-git/src/commands/: cat_file.rs  clone.rs  commit_tree.rs  config.rs  hash_object.rs  init.rs  ls_tree.rs  mod.rs  write_tree.rs
rust-jepsen/: Cargo.toml  init.json
rust-jepsen/broadcast/: Cargo.toml  cast.txt
rust-jepsen/broadcast/src/: main.rs
rust-jepsen/echo/: Cargo.toml  echo.json
rust-jepsen/echo/src/: main.rs
rust-jepsen/unique-id/: Cargo.toml
rust-jepsen/unique-id/src/: main.rs
rust-log-example/: Cargo.toml  README.md  log_config.yaml
rust-log-example/src/: config.rs  main.rs
rust-macros/: Cargo.toml
rust-macros/macros/: Cargo.toml
rust-macros/macros-test/: Cargo.toml
rust-macros/macros-test/src/: lib.rs
rust-macros/macros/src/: lib.rs
rust-simple-http-server/: Cargo.toml  README.md
rust-simple-http-server/src/: http.rs  main.rs  parser.rs
rust-tui-example/: Cargo.toml  README.md  build.rs
rust-tui-example/src/: main.rs  tui.rs
sealed-patterns-records/: build.gradle  settings.gradle
sealed-patterns-records/gradle/wrapper/: gradle-wrapper.properties
sealed-patterns-records/src/main/java/org/example/: ExecutableStatement.java  Expr.java  Op.java  ParseException.java  Parser.java
sealed-patterns-records/src/test/java/org/example/: ParserTest.java
tree-sitter-example/: Cargo.toml
tree-sitter-example/src/: main.rs
typestate/: CLAUDE.md  Cargo.toml
typestate/src/: compiler.rs  main.rs
udp-example/: Cargo.toml
udp-example/src/: main.rs
(+2 files in other folders)
