[package]
name = "rust-git"
version = "0.1.0"
edition = "2021"

[dependencies]
#reqwest = { version = "0.12.5", features = ["json", "blocking"] }
#tokio = { version = "1.38.1", features = ["full"] }
bytes = "1.6.1"
clap = { version = "4.5.9", features = ["derive"] }
flate2 = { version = "1.0.30", features = ["zlib"] }
sha1 = "0.10.6"
hex = "0.4.3"
anyhow = "1.0.86"
thiserror = "1.0.63"
log = { version = "0.4", features = ["std"] }
env_logger = "0.11.3"
lazy_static = "1.5.0"
dirs = "5.0.1"
lazy-regex = "3.2.0"
tempfile = "3.12.0"
chrono = "0.4.38"
