[package]
name = "rust-examples"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-backtrace = "0.6.1"
color-eyre = "0.6.3"
log = "0.4.21"
log4rs = "1.3.0"
thiserror = "1.0.58"
toml = "0.8.12"
serde = { version = "1.0.197", features = ["derive"] }

[features]
pretty-backtrace = []
