[package]
name = "http-server-starter-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
anyhow = "1.0.86"                                   
bytes = "1.6.0"                                     
thiserror = "1.0.61"                                
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread", "rt", "net", "io-util", "fs"] }
nom = "7.1.3"                                       
itertools = "0.13.0"                                

[dev-dependencies]
pretty_assertions = "1.4.0"                         

