[package]
name = "rust-tui-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.3"
futures = "0.3.30"
serde = { version = "1.0.197", features = ["derive"] }
serde_derive = "1.0.197"
tokio = { version = "1.37.0", features = ["time", "macros", "rt"] }
tokio-util = { version = "0.7.10", features = ["rt"] }
signal-hook = "0.3.17"
clap = "4.5.4"
log = "0.4.21"
chrono = "0.4.37"
crossterm = { version = "0.27.0", features = ["serde", "event-stream"] }
ratatui = "0.26.1"
